--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,12 +7,79 @@
 body {
     position: relative;
     perspective: 600px;
+    height: 100vh;
 }
 
 @mixin center {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+@mixin overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0, 0, 0 , 80%);
+    @include center();
+    z-index: 1;
+}
+
+@mixin overlay-content {
+    @include center();
+    flex-direction: column;
+    width: 100%;
+    background-color: #3B9AE1;
+    padding: 30px;
+    gap: 20px;
+}
+
+.overlay-start {
+    @include overlay();
+    .content {
+        @include overlay-content();
+        .input input {
+            height: 30px;
+            width: 200px;
+            padding-left: 5px;
+            border: none;
+            outline: none;
+            border-radius: 5px;
+        }
+        .btn {
+            color: white;
+            background-color: fuchsia;
+            padding: 5px 10px;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 20px;
+        }
+    }
+}
+
+.overlay-end {
+    @include overlay();
+    display: none;
+    .content {
+        @include overlay-content();
+    }
+    .winner-loser {
+        font-size: 23px;
+        color: white;
+        letter-spacing: 2px;
+    }
+    .option {
+        display: flex;
+        gap: 20px;
+        div {
+            color: white;
+            background-color: fuchsia;
+            padding: 5px 10px;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 20px;
+        }
+    }
 }
 
 .container {
